--- a/css/contents.css
+++ b/css/contents.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+ @charset "utf-8";
 
     /* 메인 */
     .mainBanner{width:100%;height:400px;background:#abcfcb;}
@@ -229,6 +229,22 @@
     .majorBList li .tit{font-size:16px;color:#ff9720;font-weight:700;}
     .majorBList li .tit img{margin-right:5px;}
     .majorBList li .tail{}
+
+    /* 디테일 */
+    .detailBox { width: 100%; height: auto; border-top: 2px solid #ff9720; border-bottom:2px solid #ff9720;}
+    .detailBox .dheader { width: 100%; height: auto; padding: 20px; box-sizing: border-box; background: #fff6ed; }
+    .detailBox .dheader h3 { font-weight: 700; margin-bottom: 5px; }
+    .detailBox .dheader p { color: #999; }
+    .detailBox .dbody { width:100%; height:auto; padding: 20px;box-sizing: border-box;}
+    .detailBox .dbody img { max-width: 100%; }
+    .detailBox .dfooter { width: 100%; height: auto; }
+    .detailBox .dfooter ul{ width: 100%; border-top: 1px solid #ddd; }
+    .detailBox .dfooter ul li { width:100%; display: flex; align-items: center; justify-content: flex-start; padding: 10px; box-sizing: border-box; border-bottom: 1px solid #ddd;}
+    .detailBox .dfooter ul li:last-child { border-bottom: 0; }
+    .detailBox .dfooter ul li .tit {width: 80px; border-right: 1px solid #ddd; margin-right: 15px;}
+    .detailBox .dfooter ul li .desc {width: calc(100% - 95px);overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
+    .list_detail .btn { width:100%; height:auto; display: flex;align-items: center;justify-content: flex-end;margin-top: 30px;}
+    .small_btn {display: block;width: 70px;height:30px;background: #ff9720;color: #fff;text-align: center;line-height: 30px;}
 
     /* 반응형 */
 	@media (max-width:1000px){
