--- a/css/contents.css
+++ b/css/contents.css
@@ -87,6 +87,7 @@
 	.executive td{border-bottom:1px solid #dddddd;}
 	.executive tr:last-child td{border-bottom:0 none;}
     .executive td.title{overflow:hidden;white-space:nowrap;text-overflow:ellipsis;}
+    .executive td.name{letter-spacing:.3em;}
 
     /* 오시는길 */
     .mapArea{width:100%;height:320px;background:#ddd;margin-bottom:36px;background:url('../images/map.jpg')no-repeat center;}
