--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,14 @@
 @charset "utf-8";
 
 /* 폰트 */
-@font-face {font-family: 'NotoSans';font-weight: 300;font-style: normal;src: url(./font/NotoSansCJKkr-Light.woff) format('woff');}
-@font-face {font-family: 'NotoSans';font-weight: 400;font-style: normal;src: url(./font/NotoSansCJKkr-Regular.woff) format('woff');}
-@font-face {font-family: 'NotoSans';font-weight: 500;font-style: normal;src: url(./font/NotoSansCJKkr-Medium.woff) format('woff');}
-@font-face {font-family: 'NotoSans';font-weight: 700;font-style: normal;src: url(./font/NotoSansCJKkr-Bold.woff) format('woff');}
-@font-face {font-family: 'Gmarket Sans';font-weight: 300;font-style: normal;src: url(./font/GmarketSansLight.woff) format('woff');}
-@font-face {font-family: 'Gmarket Sans';font-weight: 500;font-style: normal;src: url(./font/GmarketSansMedium.woff) format('woff');}
-@font-face {font-family: 'Gmarket Sans';font-weight: 700;font-style: normal;src: url(./font/GmarketSansBold.woff) format('woff');}
+@font-face {font-family: 'NotoSans';font-weight: 300;font-style: normal;src: url(../font/NotoSansCJKkr-Light.woff) format('woff');}
+@font-face {font-family: 'NotoSans';font-weight: 400;font-style: normal;src: url(../font/NotoSansCJKkr-Regular.woff) format('woff');}
+@font-face {font-family: 'NotoSans';font-weight: 500;font-style: normal;src: url(../font/NotoSansCJKkr-Medium.woff) format('woff');}
+@font-face {font-family: 'NotoSans';font-weight: 700;font-style: normal;src: url(../font/NotoSansCJKkr-Bold.woff) format('woff');}
+@font-face {font-family: 'Gmarket Sans';font-weight: 300;font-style: normal;src: url(../font/GmarketSansLight.woff) format('woff');}
+@font-face {font-family: 'Gmarket Sans';font-weight: 500;font-style: normal;src: url(../font/GmarketSansMedium.woff) format('woff');}
+@font-face {font-family: 'Gmarket Sans';font-weight: 700;font-style: normal;src: url(../font/GmarketSansBold.woff) format('woff');}
+@font-face {font-family: 'KBIZHanmaumGothic';font-weight:normal;font-style:normal;src:url(../font/KBIZHanmaumGothic.woff) format('woff');}
 
 /** 태그 초기화 **/
 html, body{width:100%;height:100%;}
