--- a/css/contents.css
+++ b/css/contents.css
@@ -33,8 +33,8 @@
     .rightBtnArea li a span{display:inline-block;margin-top:16px;color:#fff;}
 
     .btmBanner{overflow:hidden;margin:36px auto 0;width:1000px;height:70px;border:1px solid #ddd;box-sizing:border-box;}
-    .btmBanner ul{white-space:nowrap;}
-    .btmBanner li{display:inline-block;padding:23px 15px;}
+    .btmBanner ul{white-space:nowrap;width:150%;height:100%;}
+    .btmBanner li{float:left;display:flex;align-items:center;margin:0 15px;height:100%;}
 	/* sub */
 	.breadcrumb{display:flex;align-items:center;height:38px;margin-bottom:30px;border-bottom:1px solid #ddd;text-align:right;}
 	.breadcrumb span{line-height:19px;font-size:14px;}
